# automated-research-report-generation

./: .env_copy  .gitignore  README.md  pyproject.toml  requirements.txt
generated_report/: _20251026_013155.docx
generated_report/Involvement_of_LIC_in_Adani_Scam_20251026_133641/: Involvement_of_LIC_in_Adani_Scam_20251026_133641.docx
generated_report/Role_of_AI_in_Telecom_OSS_20251101_110735/: Role_of_AI_in_Telecom_OSS_20251101_110735.docx
notebook/: test.ipynb
research_and_analyst/backend_server/: workflooooow.py
research_and_analyst/utils/: config_loader.py  model_loader.py
