[project]
name = "automated-research-report-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.3.32",
    "langgraph>=0.6.8",
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
    "tavily-python>=0.7.12",
    "wikipedia>=1.4.0",
]

# Optional: authors, license
authors = [{ name = "Pradeep Kumawat" }]
license = { text = "Proprietary" }

# Optional: CLI command (python -m pip install -e . )
#[project.scripts]
#ecomm-assistant = "prod_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["research_and_analyst"]
include = ["AUTOMATED-RESEARCH-REPORT-GENERATION*"]
